# AutoTest-prototype

./: .gitmodules
.github/workflows/: main.yml
SampleApp/: CMakeLists.txt  SampleApp.cpp
SampleApp/.github/workflows/: ci.yml
SampleApp/SampleApp/x64/Debug/: SampleApp.ilk  vc143.idb
SampleApp/SampleApp/x64/Debug/SampleApp.tlog/: link.read.1.tlog
SampleApp/Test/: Test.sln  Test.vcxproj
SampleApp/Test/Test/x64/Debug/: Test.exe.recipe  Test.vcxproj.FileListAbsolute.txt
SampleApp/Test/Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SampleApp__/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  MyTestProject.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SampleApp.sln  SampleApp.vcxproj  SampleApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SampleApp__/SampleApp/x64/Debug/: SampleApp.ilk  vc143.idb
testApp/: testApp.cpp  testApp.sln  testApp.vcxproj  testApp.vcxproj.filters
